# aglio

./: CMakeLists.txt  LICENSE  README.md  glaze.patch
.github/workflows/: ci.yml
cppcon_example/code/: CMakeLists.txt  main.cpp  ostream.hpp  serializer.hpp  type_descriptor.hpp
src/aglio/: fmt.hpp  format.hpp  json.hpp  ostream.hpp  packager.hpp  remote_fmt.hpp  serialization_buffers.hpp  serializer.hpp  type_descriptor.hpp
tests/: CMakeLists.txt  check_format.hpp  fmt.hpp  format.hpp  ostream.hpp  packager.cpp  packager.hpp  test.cpp  types.hpp
